# nejlika-libraries

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cli/: CMakeLists.txt  main.cpp  nejlika.json
common/: CMakeLists.txt  Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
core/: AbstractMod.cpp  AbstractMod.hpp  AbstractSerializable.hpp  Artifacts.cpp  Artifacts.hpp  ArtifactsInterface.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  ContextExtention.hpp  Database.cpp  Database.hpp  JsonUtilities.cpp  JsonUtilities.hpp  Locale.cpp  Locale.hpp  Localization.cpp  Localization.hpp  Lookup.cpp  Lookup.hpp  Manifest.cpp  Manifest.hpp  ModPack.cpp  ModPack.hpp  ModResources.cpp  ModResources.hpp  Mods.cpp  Mods.hpp  TypeTemplate.cpp  TypeTemplate.hpp  TypeTemplateAction.cpp  TypeTemplateAction.hpp  TypeTemplateApplier.cpp  TypeTemplateApplier.hpp  TypeTemplateCollection.cpp  TypeTemplateCollection.hpp  TypeTemplateContext.cpp  TypeTemplateContext.hpp  TypeTemplateError.cpp  TypeTemplateError.hpp  (+16 more)
geometry/: CMakeLists.txt  Construct.hpp  Factory.cpp  Factory.hpp  NifWrapper.cpp  NifWrapper.hpp  Pointer.hpp
gltf/: CMakeLists.txt  Converter.cpp  Converter.hpp  ConverterHelper.cpp  ConverterHelper.hpp  TerrainConverter.cpp  TerrainConverter.hpp  gltf.h
sqlite3/: CMakeLists.txt  CppSQLite3.cpp  CppSQLite3.h
templates/: accessory-location-template.json  add-component-template.json  animation-index-template.json  animation-template.json  base-combat-ai-component-template.json  behavior-template.json  camera-path-template.json  collection-template.json  destructible-component-template.json  directory-template.json  effect-template.json  emote-template.json  environment-template.json  file-template.json  icon-template.json  inventory-component-template.json  item-component-template.json  level-object-template.json  lighting-template.json  locale-template.json  loot-matrix-template.json  loot-table-array-template.json  loot-table-template.json  minifig-component-template.json  minifig-decal-legs-template.json  minifig-decal-torso-template.json  mission-npc-component-template.json  mission-task-template.json  mission-template.json  movement-ai-component-template.json  object-template.json  physics-component-template.json  precondition-template.json  recipe-template.json  remove-level-object-template.json  render-component-template.json  resources-template.json  scene-template.json  script-component-template.json  skill-template.json  (+6 more)
tinyxml2/: CMakeLists.txt
world/: BoundaryLine.cpp  BoundaryLine.hpp  CMakeLists.txt  CameraData.cpp  CameraData.hpp  CameraWaypointData.cpp  CameraWaypointData.hpp  CullData.cpp  CullData.hpp  EditorSettings.cpp  EditorSettings.hpp  EnvironmentInformation.cpp  EnvironmentInformation.hpp  Level.cpp  Level.hpp  LevelInfo.cpp  LevelInfo.hpp  LevelObjects.cpp  LevelObjects.hpp  LightingInformation.cpp  LightingInformation.hpp  NpcWaypointData.cpp  NpcWaypointData.hpp  ObjectInformation.cpp  ObjectInformation.hpp  OldLevelInfo.cpp  OldLevelInfo.hpp  Particle.cpp  Particle.hpp  ParticleInformation.cpp  ParticleInformation.hpp  Path.cpp  Path.hpp  PathInformation.cpp  PathInformation.hpp  PathKeyValuePairs.cpp  PathKeyValuePairs.hpp  PlatformData.cpp  PlatformData.hpp  PlatformWayointData.cpp  (+55 more)
